--- a/index.html
+++ b/index.html
@@ -22,5 +22,20 @@
             <div class="social-icon">IG</div>
         </div>
     </div>
+    <div id="main">
+        <img src="img.png" alt="" id="bg-img">
+        <p class="white-heading" id="case-study">Case Study</p>
+        <div class="line"></div>
+        <div id="project-details">
+            <p class="white-heading" id="details-name">Project Details</p>
+            <div id="details">
+                <p id="country">Las Vegas</p>
+                <p id="year">2022</p>
+                <p id="int-ext">Exterior & Interior</p>
+            </div>
+            <div id="detail-sep"></div>
+            <p id="more-case">See case study</p>
+        </div>
+    </div>
 </body>
 </html>
