--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div id="main">
-        <img src="img.png" alt="" id="bg-img">
+        <img src="img/img.png" alt="" id="bg-img">
         <p class="white-heading" id="case-study">Case Study</p>
         <div class="line"></div>
         <div id="project-details">
