"update mid, right side"

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="nav">
         <div id="title">
-            <p class="bold transform-title">GOODMOODS</p>
+            <p class="transform-title">GOODMOODS</p>
         </div>
         <div id="double-lines">
             <div class="line"></div>
@@ -23,8 +23,8 @@
         </div>
     </div>
     <div id="main">
-        <img src="img/img.png" alt="" id="bg-img">
-        <p class="white-heading" id="case-study">Case Study</p>
+        <img src="img/img.png" alt="guest room" id="bg-img">
+        <p class="white-heading" id="case-study">CASE STUDY</p>
         <div class="line"></div>
         <div id="project-details">
             <p class="white-heading" id="details-name">Project Details</p>
@@ -35,6 +35,25 @@
             </div>
             <div id="detail-sep"></div>
             <p id="more-case">See case study</p>
+        </div>
+        <div id="big-title">
+            <div>
+                <p class="white-name">Classic</p>
+                <p class="white-name">& Modern</p>
+            </div>
+            <div id="prev-next">
+                <p class="transition">Next</p>
+                <br>
+                <p class="transition">Prev</p>
+            </div>
+            <div id="page-number">
+                <p id="current-page">01 / <strong>04</strong></p>
+            </div>
+        </div>
+        <div id="showcase-img">
+            <img src="img/img1.png" alt="Guest room 1">
+            <img src="img/img2.png" alt="Guest room 2">
+            <img src="img/img3.png" alt="Guest room 3">
         </div>
     </div>
 </body>
