--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <br>
                 <p class="transition">Prev</p>
             </div>
-            <div id="page-number">
+            <div>
                 <p id="current-page">01 / <strong>04</strong></p>
             </div>
         </div>
