--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p id="int-ext">Exterior & Interior</p>
             </div>
             <div id="detail-sep"></div>
-            <p id="more-case">See case study</p>
+            <p id="more-case">See Case Study</p>
         </div>
         <div id="big-title">
             <div>
