--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,600;0,700;0,800;1,300&family=Raleway:wght@600&display=swap" rel="stylesheet">
     <title>Landing page layout</title>
 </head>
 <body>
@@ -14,7 +17,7 @@
         </div>
         <div id="double-lines">
             <div class="line"></div>
-            <div class="line"></div>
+            <div class="line line2"></div>
         </div>
         <div id="social">
             <div class="social-icon">FB</div>
