--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         </div>
         <div id="social">
             <div class="social-icon">FB</div>
-            <div class="social-icon">TW</div>
+            <div class="social-icon icon2">TW</div>
             <div class="social-icon">IG</div>
         </div>
     </div>
     <div id="main">
         <img src="img/img.png" alt="guest room" id="bg-img">
-        <p class="white-heading" id="case-study">CASE STUDY</p>
+        <p class="white-heading" id="case-study">CASE STUDTY</p>
         <div class="line"></div>
         <div id="project-details">
             <p class="white-heading" id="details-name">Project Details</p>
