adjust white line

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p id="more-case">See Case Study</p>
         </div>
         <div id="big-title">
-            <div>
+            <div class = "big-title-top">
                 <p class="white-name">Classic</p>
                 <p class="white-name">& Modern</p>
             </div>
