change big title font

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,600;0,700;0,800;1,300&family=Raleway:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
     <title>Landing page layout</title>
 </head>
 <body>
@@ -31,18 +32,25 @@
         <div class="line"></div>
         <div id="project-details">
             <p class="white-heading" id="details-name">Project Details</p>
+            <br>
             <div id="details">
-                <p id="country">Las Vegas</p>
+                <p id="country">Las vegas</p>
                 <p id="year">2022</p>
                 <p id="int-ext">Exterior & Interior</p>
             </div>
+            <br>
+            <br>
+            <br>
             <div id="detail-sep"></div>
-            <p id="more-case">See Case Study</p>
+            <br>
+            <br>
+            <br>
+            <p id="more-case">See case study</p>
         </div>
         <div id="big-title">
-            <div class = "big-title-top">
-                <p class="white-name">Classic</p>
-                <p class="white-name">& Modern</p>
+            <div>
+                <p class="white-name top">Classic</p>
+                <p class="white-name bottom">& Modern</p>
             </div>
             <div id="prev-next">
                 <p class="transition">Next</p>
